--- a/package.json
+++ b/package.json
@@ -4,29 +4,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@firebase/app": "^0.3.7",
     "ajv": "^6.2.0",
     "bootstrap": "^4.0.0",
-    "firebase": "^4.11.0",
+    "firebase": "^5.8.0",
     "jquery": "^3.3.1",
-    "npm": "^5.7.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-firebaseui": "^1.1.9",
-    "react-scripts": "1.1.1",
-    "reactstrap": "^5.0.0-beta",
-    "redux": "^3.7.2"
+    "npm": "^6.7.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-firebaseui": "^3.1.2",
+    "react-scripts": "^2.1.8",
+    "reactstrap": "^7.1.0",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "axios": "^0.18.0",
     "date-fns": "^1.29.0",
-    "gh-pages": "^1.1.0",
+    "gh-pages": "^2.0.1",
     "prop-types": "^15.6.1",
-    "react-redux": "^5.0.7",
+    "react-redux": "^6.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2",
+    "redux": "^4.0.1",
     "redux-thunk": "^2.2.0",
-    "styled-components": "^3.1.6"
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +36,11 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
